--- a/dainer-magic/pom.xml
+++ b/dainer-magic/pom.xml
@@ -23,6 +23,7 @@
             <groupId>com.iq80.com</groupId>
             <artifactId>dainer-loader</artifactId>
             <version>1.0-SNAPSHOT</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
