--- a/dainer-aether/pom.xml
+++ b/dainer-aether/pom.xml
@@ -9,7 +9,7 @@
     </parent>
 
     <groupId>com.iq80.com</groupId>
-    <artifactId>dainer-loader</artifactId>
+    <artifactId>dainer-aether</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
@@ -23,14 +23,32 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.iq80.com</groupId>
-            <artifactId>dainer-aether</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <groupId>org.sonatype.aether</groupId>
+            <artifactId>aether-api</artifactId>
+            <version>${aetherVersion}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.sonatype.aether</groupId>
+            <artifactId>aether-util</artifactId>
+            <version>${aetherVersion}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.sonatype.aether</groupId>
+            <artifactId>aether-connector-file</artifactId>
+            <version>${aetherVersion}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.sonatype.aether</groupId>
+            <artifactId>aether-connector-asynchttpclient</artifactId>
+            <version>${aetherVersion}</version>
         </dependency>
 
         <dependency>
             <groupId>org.apache.maven</groupId>
-            <artifactId>maven-embedder</artifactId>
+            <artifactId>maven-aether-provider</artifactId>
             <version>3.0.4</version>
         </dependency>
 
